--- a/index.html
+++ b/index.html
@@ -31,13 +31,13 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="#footer"><strong>Contact</strong></a>
+              <a class="nav-link" href="#footer"><b>Contact</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#pricing"><strong>Pricing</strong></a>
+              <a class="nav-link" href="#pricing"><b>Pricing</b></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#cta"><strong>Download</strong></a>
+              <a class="nav-link" href="#cta"><b>Download</b></a>
             </li>
           </ul>
         </div>
